--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
     "react-razorpay": "^3.0.1",
     "react-resizable-panels": "^2.1.3",
