--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
+    "react-image-crop": "^11.0.10",
     "react-razorpay": "^3.0.1",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
